# cmakegtest

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  setup.sh
src/: Account.cpp  Account.hpp  CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main_tests.cpp
